<resources>
    <string name="app_name">SIGEVA</string>
    <string name="password">Password</string>
    <string name="email">Correo electrónico</string>
    <string name="example_password">123</string>
    <string name="example_email">example@example.com</string>
    <string name="available_candidates">Candidatos Disponibles</string>
    <string name="available_votations">Votaciones Disponibles</string>
    <string name="description_login">Sistema de Gestión de Votaciones de Aprendices</string>
    <string name="button_text_partcipar">Participar</string>
    <string name="no_votation_actives_title">En este momento no hay votaciones activas.</string>
    <string name="no_candidates_actives_subtitle">Por favor, vuelve a intentarlo más tarde.</string>
    <string name="no_candidates_actives_title">En este momento no hay candidatos para esta eleccion.</string>
    <string name="no_votation_actives_subtitle">Por favor, vuelve a intentarlo más tarde.</string>
    <string name="descripcion_ampliada">Ver descripción ampliada</string>
    <string name="votar_candidatp">Votar por este candidatoResponse</string>


    //Confirmacion de Votos
    <string name="title_Confirmacion">Confirmar Voto</string>
    <string name="description_confirmacion">Ingresa el codigo de 6 digitos recibido en el correo</string>
    <string name="btnConfirm">Confirmar Voto</string>


    //Exito de Votos
    <string name="textExito">¡Tu voto fue registrado con exito</string>
    <string name="btnHome">Volver al inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>