<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".ConfirmarVotoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="284dp"
        android:layout_height="580dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/titleConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_Confirmacion"
            android:textColor="@color/text_color_no_votations_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="150dp"
            />

        <TextView
            android:id="@+id/codeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_confirmacion"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/titleConfirmar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/layoutEdtx"
            android:layout_width="280dp"
            android:layout_height="85dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/codeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            >


            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:maxLength="1"

                android:id="@+id/et1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_margin="1dp"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                />


            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:id="@+id/et2"
                android:maxLength="1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_margin="1dp"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                />


            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/et3"
                android:textAllCaps="true"
                android:layout_margin="1dp"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                />


            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAllCaps="true"
                android:id="@+id/et4"
                android:layout_margin="1dp"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                />

            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/et5"
                android:textAllCaps="true"
                android:layout_margin="1dp"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                />

            <EditText
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:hint="X"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/et6"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"

                android:layout_margin="1dp"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmarVoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_votation_24"
            app:iconTint="@color/white"
            android:background="@drawable/background_button_radius"
            app:layout_constraintTop_toBottomOf="@+id/layoutEdtx"
            android:text="@string/btnConfirm"
            android:textColor="@color/white"
            app:backgroundTint="@color/button_background_tint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>